--- a/Front End/blog-post-app/public/index.html
+++ b/Front End/blog-post-app/public/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>React Blog App</title>
   </head>
+  <style>
+    .link{
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
   <body>
     <div id="root"></div>
   </body>
